flowcontroller/yamls/networkpolicy-allow-flink-to-redis-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flink-to-redis-egress
  annotations:
    flowDef:
      priority: 1
spec:
  policyTypes:
  - Egress
  podSelector: 
    matchLabels:
      app: flink
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: elasticsearch
      namespaceSelector:
        matchLabels:
          name: ((/spec/namespace))
    ports:
    - protocol: TCP
      port: 6379
